// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox base demo works fine 1`] = `
<div>
  <label
    class="t-checkbox undefined"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
      未选中项
      
    </span>
  </label>
  <label
    class="t-checkbox undefined"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
      未选悬停项
      
    </span>
  </label>
  <label
    class="t-checkbox undefined t-is-checked"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       选中项 
      
    </span>
  </label>
  <label
    class="t-checkbox undefined t-is-disabled"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      disabled=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       未选禁用项 
      
    </span>
  </label>
  <label
    class="t-checkbox undefined t-is-checked t-is-disabled"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      disabled=""
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
       选中禁用项 
      
    </span>
  </label>
</div>
`;

exports[`Checkbox checkbox group demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div>
    方式一：业务侧自定义全选功能。选中值: 选项一
  </div>
  <div>
    <label
      class="t-checkbox undefined t-is-indeterminate"
      modelvalue="false"
    >
      <input
        class="t-checkbox__former"
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        全选
        
      </span>
    </label>
  </div>
  <div
    class="t-checkbox-group"
    modelvalue="选项一"
  >
    
    <label
      class="t-checkbox undefined t-is-checked"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项一"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        <div>
          选项一
        </div>
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项二"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        选项二
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项三"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        选项三
        
      </span>
    </label>
    
    <!---->
  </div>
  <br />
  <div>
    方式二：组件内置全选功能，使用插槽定义选项。选中值: 选项一
  </div>
  <div
    class="t-checkbox-group"
    modelvalue="选项一"
  >
    <!---->
    
    <label
      class="t-checkbox undefined"
      modelvalue="false"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        <!---->
      </span>
    </label>
    <label
      class="t-checkbox undefined t-is-checked"
      modelvalue="false"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项一"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        选项一
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
      modelvalue="false"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项二"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        <!---->
      </span>
    </label>
    <label
      class="t-checkbox undefined"
      modelvalue="false"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项三"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        <!---->
      </span>
    </label>
    
  </div>
  <br />
  <div>
    方式三：组件内置全选功能，使用 \`options\` 定义选项。选中值: 选项一, 选项二, 选项三
  </div>
  <div
    class="t-checkbox-group"
    modelvalue="选项一,选项二,选项三"
  >
    
    <label
      class="t-checkbox undefined t-is-checked"
      data-name="TDESIGN_CHECK_ALL"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        全选
        
      </span>
    </label>
    <label
      class="t-checkbox undefined t-is-checked"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项一"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        选项一
        
      </span>
    </label>
    <label
      class="t-checkbox undefined t-is-checked"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项二"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        <div>
          选项二
        </div>
        
      </span>
    </label>
    <label
      class="t-checkbox undefined t-is-checked"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项三"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        选项三
        
      </span>
    </label>
    
    <!---->
  </div>
  <br />
  <div>
    方式四：组件内置全选功能，非受控用法
  </div>
  <div
    class="t-checkbox-group"
    modelvalue=""
  >
    
    <label
      class="t-checkbox undefined t-is-indeterminate"
      data-name="TDESIGN_CHECK_ALL"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        全选
        
      </span>
    </label>
    <label
      class="t-checkbox undefined t-is-checked"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项一"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        选项一
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项二"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        <div>
          选项二
        </div>
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="选项三"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        选项三
        
      </span>
    </label>
    
    <!---->
  </div>
</div>
`;

exports[`Checkbox controlled demo works fine 1`] = `
<div>
  <!-- 单个 Checkbox 受控模式 -->
  <label
    class="t-checkbox undefined t-is-checked"
    modelvalue="true"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
      语法糖（v-model）
      
    </span>
  </label>
  <label
    class="t-checkbox undefined t-is-checked"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
      受控属性
      
    </span>
  </label>
  <label
    class="t-checkbox undefined"
    modelvalue="false"
  >
    <input
      class="t-checkbox__former"
      type="checkbox"
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      
      非受控属性
      
    </span>
  </label>
  <br />
  <br />
  <br />
  <!-- 复选框框组受控模式 -->
  <div
    class="t-checkbox-group"
    modelvalue=""
  >
    
    <label
      class="t-checkbox undefined t-is-indeterminate"
      data-name="TDESIGN_CHECK_ALL"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        全选
        
      </span>
    </label>
    <label
      class="t-checkbox undefined t-is-checked"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="1"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        受控模式选项一
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="2"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        受控模式选项二
        
      </span>
    </label>
    <label
      class="t-checkbox undefined"
    >
      <input
        class="t-checkbox__former"
        name=""
        type="checkbox"
        value="3"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        
        受控模式选项三
        
      </span>
    </label>
    
    <!---->
  </div>
</div>
`;

exports[`Checkbox link demo works fine 1`] = `
<div>
  <div
    class="demo-checkbox-row-desc"
  >
    选中值: [
  "选项二"
]
  </div>
  <div
    class="demo-checkbox-row"
  >
    <!-- name 非必需 -->
    <div
      class="t-checkbox-group"
      modelvalue="选项二"
    >
      
      <label
        class="t-checkbox undefined"
      >
        <input
          class="t-checkbox__former"
          name="city"
          type="checkbox"
          value="选项一"
        />
        <span
          class="t-checkbox__input"
        />
        <span
          class="t-checkbox__label"
        >
          
          选项一
          
        </span>
      </label>
      <label
        class="t-checkbox undefined t-is-checked"
      >
        <input
          class="t-checkbox__former"
          name="city"
          type="checkbox"
          value="选项二"
        />
        <span
          class="t-checkbox__input"
        />
        <span
          class="t-checkbox__label"
        >
          
          选项二
          
        </span>
      </label>
      <label
        class="t-checkbox undefined"
      >
        <input
          class="t-checkbox__former"
          name="city"
          type="checkbox"
          value="选项三"
        />
        <span
          class="t-checkbox__input"
        />
        <span
          class="t-checkbox__label"
        >
          
          选项三
          
        </span>
      </label>
      
      <!---->
    </div>
  </div>
  <div
    class="demo-checkbox-row"
  >
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
        重置
        
      </span>
    </button>
  </div>
</div>
`;
